CHANGELOG
=========
+-----------------------+
| VERSION: 0.5.4        |
+-----------------------+
BUGFIXES
24-11-05    Fixed long-standing image preview header probs

IMPROVEMENTS
06-12-05	Basic CLI request implemented (Eric Persson)
01-12-05    Three url parsers loaded by default: classic querystring, standard
            Seagull SEF, and now UrlAlias, see the 0.5.4 updates notes for details:
            http://trac.seagullproject.org/wiki/Howto/Misc/Upgrading/05
01-12-05    Improved performance for DB-based sessions (Eric Persson)
30-11-05    Polish translation updated (Tomasz Osmialowski)
29-11-05	RSS query more configurable (bluetoad)
29-11-05	Web root path now configurable from installer
24-11-05    DB2 support added (Tobias Kuckuck)
23-11-05    Implemented ability to load default data in installer
23-11-05	Implemented Smarty renderer (Malaney J. Hill)
22-11-05    Added ServiceLocator class and fixed db independence for testing
21-11-05    Factored out setup of table name aliases, these are not set on a per-module
            basis in the file 'tableAliases.ini' parsed at setup time.
16-11-05    Chinese translation updated (Finjon Kiang)
14-11-05    Added version-checker routine to Maintenance manager
14-11-05    Implemented xml-rpc gateway for easy creation of Seagull web services
14-11-05    Improved integration of page offset id in seagull SEF urls
            (Andreas Singer)

+-----------------------+
| VERSION: 0.5.3        |
+-----------------------+
BUGFIXES
11-11-05    Fix for &-related prob in thunderbird parsing of RSS
09-11-05    Fixed small bug where backdating date comboboxes wasn't working
            (Werner Krauss)
31-10-05	Fixed broken config calls in templates
26-10-05    Registration emails are no longer CCed to admin, separate notification
            is sent.

IMPROVEMENTS
11-11-05    Rewrote installer to handle tasks, easy to extend
11-11-05    Added $conf[site][sessionInUrl] key and set to false to overcome